manifests/longhorn/DaemonSet-longhorn-manager.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: longhorn-manager
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
  name: longhorn-manager
  namespace: longhorn-system
spec:
  selector:
    matchLabels:
      app: longhorn-manager
  template:
    metadata:
      labels:
        app: longhorn-manager
        app.kubernetes.io/instance: longhorn
        app.kubernetes.io/name: longhorn
    spec:
      containers:
        - command:
            - longhorn-manager
            - -d
            - daemon
            - --engine-image
            - docker.io/longhornio/longhorn-engine:v1.12.0
            - --instance-manager-image
            - docker.io/longhornio/longhorn-instance-manager:v1.12.0
            - --share-manager-image
            - docker.io/longhornio/longhorn-share-manager:v1.12.0
            - --backing-image-manager-image
            - docker.io/longhornio/backing-image-manager:v1.12.0
            - --support-bundle-manager-image
            - docker.io/longhornio/support-bundle-kit:v0.0.86
            - --manager-image
            - docker.io/longhornio/longhorn-manager:v1.12.0
            - --service-account
            - longhorn-service-account
            - --upgrade-version-check
          image: docker.io/longhornio/longhorn-manager:v1.12.0
          imagePullPolicy: IfNotPresent
          name: longhorn-manager
          ports:
            - containerPort: 9500
              name: manager
            - containerPort: 9502
              name: admission-wh
            - containerPort: 9503
              name: recov-backend
          readinessProbe:
            httpGet:
              path: /v1/healthz
              port: 9502
              scheme: HTTPS
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /host/boot/
              name: boot
              readOnly: true
            - mountPath: /host/dev/
              name: dev
            - mountPath: /host/proc/
              name: proc
              readOnly: true
            - mountPath: /host/etc/
              name: etc
              readOnly: true
            - mountPath: /var/lib/longhorn/
              mountPropagation: Bidirectional
              name: longhorn
            - mountPath: /tls-files/
              name: longhorn-grpc-tls
        - command:
            - sh
            - -c
            - echo share-manager image pulled && sleep infinity
          image: docker.io/longhornio/longhorn-share-manager:v1.12.0
          imagePullPolicy: IfNotPresent
          name: pre-pull-share-manager-image
      priorityClassName: longhorn-critical
      serviceAccountName: longhorn-service-account
      volumes:
        - hostPath:
            path: /boot/
          name: boot
        - hostPath:
            path: /dev/
          name: dev
        - hostPath:
            path: /proc/
          name: proc
        - hostPath:
            path: /etc/
          name: etc
        - hostPath:
            path: /var/lib/longhorn/
          name: longhorn
        - name: longhorn-grpc-tls
          secret:
            optional: true
            secretName: longhorn-grpc-tls
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 100%
